close #143 Use Collection.contains()
Implemented in CollectionContainsRefactoring.java